Set viewport for mobile

--- a/challenge.html
+++ b/challenge.html
@@ -2,6 +2,7 @@
 Copyright © 2025 David Leadbeater <https://🖐.st>
 SPDX-License-Identifier: 0BSD
 -->
+<meta name="viewport" content="width=device-width">
 <title>I Challenge Thee</title>
 <style>
   body { background: #ddd; color: #000; }
