Stop scrollbars flashing

--- a/challenge.html
+++ b/challenge.html
@@ -5,9 +5,8 @@ SPDX-License-Identifier: 0BSD
 <meta name="viewport" content="width=device-width">
 <title>I Challenge Thee</title>
 <style>
-  body { background: #ddd; color: #000; }
-  #progress { position: absolute; top: 50%%; width: 100%%; transform: translateY(-50%%);
-    text-align: center; font-size: 125%%; }
+  body { background: #ddd; color: #000; margin: 0; padding: 0; }
+  #progress { position: absolute; margin: 0; top: 50%%; left: 50%%; transform: translate(-50%%, -50%%); text-align: center; font-size: 125%%; }
   #progressBar { font-size: 250%%; user-select: none; }
   #progressBar.done { transition: font-size 2s linear, opacity 2s linear; font-size: 1000%%; opacity: 0.5; }
   .animate { animation: spin 2s infinite linear; }
