--- a/challenge.html
+++ b/challenge.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--
-Copyright © 2025 David Leadbeater <https://🖐.st>
+Copyright © 2025 David Leadbeater <https://一.st>
 SPDX-License-Identifier: 0BSD
 -->
 <meta name="viewport" content="width=device-width">
